--- a/WebForms_Demo/Site.Master
+++ b/WebForms_Demo/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - Demo</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -37,21 +37,22 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">Application name</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+	        <a href="index.html" class="navbar-brand"><img src="images/Head.jpg"></a>
+	        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sitebutton">
+	        <span class="navbar-toggler-icon"></span>
+	        </button>				
+	        <div id="sitebutton" class="collapse navbar-collapse">
+		        <ul class="navbar-nav">
+			        <li class="nav-item"><a href="#" class="nav-link">الرئيسية</a></li>
+			        <li class="nav-item"><a href="#" class="nav-link">من نحن</a></li>
+			        <li class="nav-item"><a href="#" class="nav-link">اتصل بنا</a></li>
+		        </ul>
+		        <ul class="navbar-nav mr-auto">
+			        <li class="nav-item"><a href="#" class="nav-link btn btn-info">الاشتراك</a></li>
+			        <li class="nav-item"><a href="#" class="nav-link btn btn-info">تسجيل الدخول</a></li>						
+		        </ul>
+	        </div>
         </nav>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
