moving css and js packages into master page

--- a/WebForms_Demo/Site.Master
+++ b/WebForms_Demo/Site.Master
@@ -14,6 +14,13 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+    <link rel="icon" type="image/ico" href="images/icon.ico" />
+    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <script src="bootstrap/jquery.min.js"></script>
+    <script src="bootstrap/popper.min.js"></script>
+    <script src="bootstrap/bootstrap.min.js"></script>
 
 </head>
 <body>
